--- a/package.json
+++ b/package.json
@@ -31,6 +31,7 @@
     "react-native-pager-view": "^6.1.4",
     "react-native-paper": "^5.2.0",
     "react-native-pie-chart": "^2.1.1",
+    "react-native-rename": "^3.2.12",
     "react-native-safe-area-context": "^4.5.0",
     "react-native-screens": "^3.20.0",
     "react-native-select-dropdown": "^3.3.0",
